--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "wrangler": "^3.27.0"
   },
   "dependencies": {
-    "cors-headers": "0.0.0-beta.0",
+    "cors-headers": "1.0.0",
     "rehype-pretty-code": "^0.12.6",
     "rehype-stringify": "^10.0.0",
     "remark-gemoji": "^8.0.0",
